# PolyFit2D

./: .gitignore  LICENSE  MANIFEST.in  README.md  conftest.py  example_usage.py  orphaned-junction-points.md  pyproject.toml  requirements-dev.txt  requirements-examples.txt
.github/workflows/: tests.yml
examples/: simple_bitmap_example.py
mask2polymin/: fit_line_segment.py  fit_to_points_sequence.py  plotting.py  sequence_moments.py  sequence_segment.py
performance_test/: Collinear_Margin_Sweep_Summary.md  Fitter_Improvements_Plan.md  Perf_Test_Plan.md  README.md  Synth_Shapes_Plan.md  analyze_defect_margin_ab.py  baselines.py  defect_margin_ab.py  metrics.py  plot_results.py  split_ranking_ab.py  synth_shapes.py
performance_test/gt_shapes/d048/: arrow_d048_a0.json  hexagon_d048_a0.json  house_d048_a0.json  lshape_d048_a0.json  rect_d048_a0.json  ship_d048_a0.json  star_d048_a0.json  tab_d048_a0.json
performance_test/gt_shapes/d064/: car_d064_a0.json  plane_d064_a0.json
performance_test/gt_shapes/d128/: arrow_d128_a0.json  car_d128_a0.json  hexagon_d128_a0.json  house_d128_a0.json  lshape_d128_a0.json  plane_d128_a0.json  rect_d128_a0.json  ship_d128_a0.json  star_d128_a0.json  tab_d128_a0.json
performance_test/gt_shapes/d320/: arrow_d320_a0.json  car_d320_a0.json  hexagon_d320_a0.json  house_d320_a0.json  lshape_d320_a0.json  plane_d320_a0.json  rect_d320_a0.json  ship_d320_a0.json  star_d320_a0.json  tab_d320_a0.json
performance_test/results/: collinear_margin_sweep.csv  runtime_summary.csv  summary.csv
performance_test/summarized_csvs/: defect_margin_ab_summary.csv
src/: fit_line_segment.py  fit_to_points_sequence.py  line_segment_params.py  plotting.py  polyline.py  sequence_segment.py
test/: test_consecutive_segments_separation.py  test_consecutive_segments_separation_circular.py  test_fit_closed_polygon.py  test_fit_noisy_rectangles.py  test_fit_range.py  test_input_validation.py  test_merge_collinear_segments.py  test_orphaned_junction_points.py  test_range_primitives.py  test_split_ranking.py  test_split_segment.py  test_squared_distances.py
